@@ -1,9 +1,14 @@
+2002-02-12 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+        * slab.cpp: Improve definition of core and cladding (again).
+	* slabdisp.cpp: Ditto.
+	* slabdisp.h: Ditto.
+
 2002-02-06 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
         * slab.cpp: Improve definition of core and cladding.
 	* slabdisp.cpp: Ditto.
 	
-
 2002-01-29 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
         * slab.cpp: Update support for parameter getting/setting.
